fix [#35948] Toggle-Draw AutoKeyframe Bug